Add pending release notes

--- a/app/views/homepage/release.html.erb
+++ b/app/views/homepage/release.html.erb
@@ -1,5 +1,210 @@
 <div id="about" class="col-sm-12 col-md-12">
   <div class="release_title">
+    <h2>Homosaurus v. 3.x Updates</h2>
+    <h3>Pending Release (In Progress)</h3>
+  </div>
+  <div class="info_section">
+    <p>
+      <strong>List of new terms added:</strong>
+      <ol>
+        <li><%= link_to "LGBTQ+ victims of bullying", "https://homosaurus.org/v3/homoit0001989" %></li>
+        <li><%= link_to "Lesbian victims of bullying", "https://homosaurus.org/v3/homoit0001990" %></li>
+        <li><%= link_to "Gay victims of bullying", "https://homosaurus.org/v3/homoit0001991" %></li>
+        <li><%= link_to "Bisexual victims of bullying", "https://homosaurus.org/v3/homoit0001992" %></li>
+        <li><%= link_to "Transgender victims of bullying", "https://homosaurus.org/v3/homoit0001993" %></li>
+        <li><%= link_to "Queer victims of bullying", "https://homosaurus.org/v3/homoit0001994" %></li>
+        <li><%= link_to "Asexual victims of bullying", "https://homosaurus.org/v3/homoit0001995" %></li>
+        <li><%= link_to "Intersex victims of bullying", "https://homosaurus.org/v3/homoit0001996" %></li>
+        <li><%= link_to "Two-Spirit victims of bullying", "https://homosaurus.org/v3/homoit0001997" %></li>
+        <li><%= link_to "LGBTQ+ survivors of bullying", "https://homosaurus.org/v3/homoit0001998" %></li>
+        <li><%= link_to "Lesbian survivors of bullying", "https://homosaurus.org/v3/homoit0001999" %></li>
+        <li><%= link_to "Gay survivors of bullying", "https://homosaurus.org/v3/homoit0002000" %></li>
+        <li><%= link_to "Bisexual survivors of bullying", "https://homosaurus.org/v3/homoit0002001" %></li>
+        <li><%= link_to "Transgender survivors of bullying", "https://homosaurus.org/v3/homoit0002002" %></li>
+        <li><%= link_to "Queer survivors of bullying", "https://homosaurus.org/v3/homoit0002003" %></li>
+        <li><%= link_to "Asexual survivors of bullying", "https://homosaurus.org/v3/homoit0002004" %></li>
+        <li><%= link_to "Intersex survivors of bullying", "https://homosaurus.org/v3/homoit0002005" %></li>
+        <li><%= link_to "Two-Spirit survivors of bullying", "https://homosaurus.org/v3/homoit0002006" %></li>
+        <li><%= link_to "GRID (Gay-Related Immune Deficiency)", "https://homosaurus.org/v3/homoit0001980" %></li>
+        <li><%= link_to "HAART (Highly Active Antiretroviral Therapy)", "https://homosaurus.org/v3/homoit0001981" %></li>
+        <li><%= link_to "LGBTQ+ home movies", "https://homosaurus.org/v3/homoit0001982" %></li>
+        <li><%= link_to "LGBTQ+ vlogs", "https://homosaurus.org/v3/homoit0001983" %></li>
+        <li><%= link_to "Nipple", "https://homosaurus.org/v3/homoit0001984" %></li>
+        <li><%= link_to "Aboriginal Australian lesbians", "https://homosaurus.org/v3/homoit0001974" %></li>
+        <li><%= link_to "Aboriginal Australian gay men", "https://homosaurus.org/v3/homoit0001975" %></li>
+        <li><%= link_to "Aboriginal Australian bisexual people", "https://homosaurus.org/v3/homoit0001976" %></li>
+        <li><%= link_to "Aboriginal Australian transgender people", "https://homosaurus.org/v3/homoit0001977" %></li>
+        <li><%= link_to "Aboriginal Australian queer people", "https://homosaurus.org/v3/homoit0001978" %></li>
+        <li><%= link_to "Aboriginal Australian intersex people", "https://homosaurus.org/v3/homoit0001979" %></li>
+        <li><%= link_to "Indigenous lesbians", "https://homosaurus.org/v3/homoit0001968" %></li>
+        <li><%= link_to "Indigenous gay men", "https://homosaurus.org/v3/homoit0001969" %></li>
+        <li><%= link_to "Indigenous bisexual people", "https://homosaurus.org/v3/homoit0001970" %></li>
+        <li><%= link_to "Indigenous transgender people", "https://homosaurus.org/v3/homoit0001971" %></li>
+        <li><%= link_to "Indigenous queer people", "https://homosaurus.org/v3/homoit0001972" %></li>
+        <li><%= link_to "Indigenous intersex people", "https://homosaurus.org/v3/homoit0001973" %></li>
+        <li><%= link_to "Inuit lesbians", "https://homosaurus.org/v3/homoit0001962" %></li>
+        <li><%= link_to "Inuit gay men", "https://homosaurus.org/v3/homoit0001963" %></li>
+        <li><%= link_to "Inuit bisexual people", "https://homosaurus.org/v3/homoit0001964" %></li>
+        <li><%= link_to "Inuit transgender people", "https://homosaurus.org/v3/homoit0001965" %></li>
+        <li><%= link_to "Inuit queer people", "https://homosaurus.org/v3/homoit0001966" %></li>
+        <li><%= link_to "Inuit intersex people", "https://homosaurus.org/v3/homoit0001967" %></li>
+        <li><%= link_to "Kānaka Maoli LGBTQ+ people", "https://homosaurus.org/v3/homoit0001955" %></li>
+        <li><%= link_to "Kānaka Maoli lesbians", "https://homosaurus.org/v3/homoit0001956" %></li>
+        <li><%= link_to "Kānaka Maoli gay men", "https://homosaurus.org/v3/homoit0001957" %></li>
+        <li><%= link_to "Kānaka Maoli bisexual people", "https://homosaurus.org/v3/homoit0001958" %></li>
+        <li><%= link_to "Kānaka Maoli transgender people", "https://homosaurus.org/v3/homoit0001959" %></li>
+        <li><%= link_to "Kānaka Maoli queer people", "https://homosaurus.org/v3/homoit0001960" %></li>
+        <li><%= link_to "Kānaka Maoli intersex people", "https://homosaurus.org/v3/homoit0001961" %></li>
+        <li><%= link_to "Demiromantic people", "https://homosaurus.org/v3/homoit0001985" %></li>
+        <li><%= link_to "Demiromanticism", "https://homosaurus.org/v3/homoit0001986" %></li>
+        <li><%= link_to "Greyromantic people", "https://homosaurus.org/v3/homoit0001987" %></li>
+        <li><%= link_to "Greyromanticism", "https://homosaurus.org/v3/homoit0001988" %></li>
+        <li><%= link_to "Romani lesbians", "https://homosaurus.org/v3/homoit0001949" %></li>
+        <li><%= link_to "Romani gay men", "https://homosaurus.org/v3/homoit0001950" %></li>
+        <li><%= link_to "Romani bisexual people", "https://homosaurus.org/v3/homoit0001951" %></li>
+        <li><%= link_to "Romani transgender people", "https://homosaurus.org/v3/homoit0001952" %></li>
+        <li><%= link_to "Romani queer people", "https://homosaurus.org/v3/homoit0001953" %></li>
+        <li><%= link_to "Romani intersex people", "https://homosaurus.org/v3/homoit0001954" %></li>
+        <li><%= link_to "Papuan lesbians", "https://homosaurus.org/v3/homoit0001943" %></li>
+        <li><%= link_to "Papuan gay men", "https://homosaurus.org/v3/homoit0001944" %></li>
+        <li><%= link_to "Papuan bisexual people", "https://homosaurus.org/v3/homoit0001945" %></li>
+        <li><%= link_to "Papuan transgender people", "https://homosaurus.org/v3/homoit0001946" %></li>
+        <li><%= link_to "Papuan queer people", "https://homosaurus.org/v3/homoit0001947" %></li>
+        <li><%= link_to "Papuan intersex people", "https://homosaurus.org/v3/homoit0001948" %></li>
+        <li><%= link_to "Pacific Islander American lesbians", "https://homosaurus.org/v3/homoit0001937" %></li>
+        <li><%= link_to "Pacific Islander American gay men", "https://homosaurus.org/v3/homoit0001938" %></li>
+        <li><%= link_to "Pacific Islander American bisexual people", "https://homosaurus.org/v3/homoit0001939" %></li>
+        <li><%= link_to "Pacific Islander American transgender people", "https://homosaurus.org/v3/homoit0001940" %></li>
+        <li><%= link_to "Pacific Islander American queer people", "https://homosaurus.org/v3/homoit0001941" %></li>
+        <li><%= link_to "Pacific Islander American intersex people", "https://homosaurus.org/v3/homoit0001942" %></li>
+        <li><%= link_to "LGBTQ+ athletes", "https://homosaurus.org/v3/homoit0001929" %></li>
+        <li><%= link_to "Lesbian athletes", "https://homosaurus.org/v3/homoit0001930" %></li>
+        <li><%= link_to "Gay athletes", "https://homosaurus.org/v3/homoit0001931" %></li>
+        <li><%= link_to "Bisexual athletes", "https://homosaurus.org/v3/homoit0001932" %></li>
+        <li><%= link_to "Transgender athletes", "https://homosaurus.org/v3/homoit0001933" %></li>
+        <li><%= link_to "Queer athletes", "https://homosaurus.org/v3/homoit0001934" %></li>
+        <li><%= link_to "Intersex athletes", "https://homosaurus.org/v3/homoit0001935" %></li>
+        <li><%= link_to "Two-Spirit athletes", "https://homosaurus.org/v3/homoit0001936" %></li>
+        <li><%= link_to "BIPOC", "https://homosaurus.org/v3/homoit0001928" %></li>
+        <li><%= link_to "Anti-intersex discrimination", "https://homosaurus.org/v3/homoit0001893" %></li>
+        <li><%= link_to "Neophallus", "https://homosaurus.org/v3/homoit0001894" %></li>
+        <li><%= link_to "Anti-two-spirit discrimination", "https://homosaurus.org/v3/homoit0001885" %></li>
+        <li><%= link_to "LGBTQ+ disabled people", "https://homosaurus.org/v3/homoit0001854" %></li>
+        <li><%= link_to "Lesbian disabled people", "https://homosaurus.org/v3/homoit0001855" %></li>
+        <li><%= link_to "Gay disabled people", "https://homosaurus.org/v3/homoit0001856" %></li>
+        <li><%= link_to "Bisexual disabled people", "https://homosaurus.org/v3/homoit0001857" %></li>
+        <li><%= link_to "Transgender disabled people", "https://homosaurus.org/v3/homoit0001858" %></li>
+        <li><%= link_to "Queer disabled people", "https://homosaurus.org/v3/homoit0001859" %></li>
+        <li><%= link_to "LGBTQ+ hard of hearing people", "https://homosaurus.org/v3/homoit0001860" %></li>
+        <li><%= link_to "Lesbian hard of hearing people", "https://homosaurus.org/v3/homoit0001861" %></li>
+        <li><%= link_to "Gay hard of hearing people", "https://homosaurus.org/v3/homoit0001862" %></li>
+        <li><%= link_to "Bisexual hard of hearing people", "https://homosaurus.org/v3/homoit0001863" %></li>
+        <li><%= link_to "Transgender hard of hearing people", "https://homosaurus.org/v3/homoit0001864" %></li>
+        <li><%= link_to "Queer hard of hearing people", "https://homosaurus.org/v3/homoit0001865" %></li>
+        <li><%= link_to "Lesbian Deaf people", "https://homosaurus.org/v3/homoit0001867" %></li>
+        <li><%= link_to "Gay Deaf people", "https://homosaurus.org/v3/homoit0001868" %></li>
+        <li><%= link_to "Bisexual Deaf people", "https://homosaurus.org/v3/homoit0001869" %></li>
+        <li><%= link_to "Transgender Deaf people", "https://homosaurus.org/v3/homoit0001870" %></li>
+        <li><%= link_to "Queer Deaf people", "https://homosaurus.org/v3/homoit0001871" %></li>
+        <li><%= link_to "LGBTQ+ blind people", "https://homosaurus.org/v3/homoit0000822" %></li>
+        <li><%= link_to "Lesbian blind people", "https://homosaurus.org/v3/homoit0001872" %></li>
+        <li><%= link_to "Gay blind people", "https://homosaurus.org/v3/homoit0001873" %></li>
+        <li><%= link_to "Bisexual blind people", "https://homosaurus.org/v3/homoit0001874" %></li>
+        <li><%= link_to "Transgender blind people", "https://homosaurus.org/v3/homoit0001875" %></li>
+        <li><%= link_to "Queer blind people", "https://homosaurus.org/v3/homoit0001876" %></li>
+        <li><%= link_to "LGBTQ+ wheelchair users", "https://homosaurus.org/v3/homoit0001877" %></li>
+        <li><%= link_to "Lesbian wheelchair users", "https://homosaurus.org/v3/homoit0001886" %></li>
+        <li><%= link_to "Gay wheelchair users", "https://homosaurus.org/v3/homoit0001887" %></li>
+        <li><%= link_to "Bisexual wheelchair users", "https://homosaurus.org/v3/homoit0001888" %></li>
+        <li><%= link_to "Transgender wheelchair users", "https://homosaurus.org/v3/homoit0001889" %></li>
+        <li><%= link_to "Queer wheelchair users", "https://homosaurus.org/v3/homoit0001890" %></li>
+        <li><%= link_to "Crip", "https://homosaurus.org/v3/homoit0001891" %></li>
+        <li><%= link_to "LGBTQ+ Deaf culture", "https://homosaurus.org/v3/homoit0001878" %></li>
+        <li><%= link_to "LGBTQ+ people with chronic illnesses", "https://homosaurus.org/v3/homoit0001879" %></li>
+        <li><%= link_to "Lesbians with chronic illnesses", "https://homosaurus.org/v3/homoit0001880" %></li>
+        <li><%= link_to "Gay men with chronic illnesses", "https://homosaurus.org/v3/homoit0001881" %></li>
+        <li><%= link_to "Bisexual people with chronic illnesses", "https://homosaurus.org/v3/homoit0001882" %></li>
+        <li><%= link_to "Transgender people with chronic illnesses", "https://homosaurus.org/v3/homoit0001883" %></li>
+        <li><%= link_to "Queer people with chronic illnesses", "https://homosaurus.org/v3/homoit0001884" %></li>
+        <li><%= link_to "LGBTQ+ asylum seekers", "https://homosaurus.org/v3/homoit0001853" %></li>
+        <li><%= link_to "Stand-to-Pee devices", "https://homosaurus.org/v3/homoit0001852" %></li>
+        <li><%= link_to "Vaginoplasty", "https://homosaurus.org/v3/homoit0001851" %></li>
+        <li><%= link_to "Phalloplasty", "https://homosaurus.org/v3/homoit0001850" %></li>
+        <li><%= link_to "Tracheal shave", "https://homosaurus.org/v3/homoit0001849" %></li>
+        <li><%= link_to "Vaginectomy", "https://homosaurus.org/v3/homoit0001848" %></li>
+        <li><%= link_to "Scrotoplasty", "https://homosaurus.org/v3/homoit0001847" %></li>
+        <li><%= link_to "Metoidioplasty", "https://homosaurus.org/v3/homoit0001846" %></li>
+        <li><%= link_to "Labiaplasty", "https://homosaurus.org/v3/homoit0001845" %></li>
+        <li><%= link_to "Clitoroplasty", "https://homosaurus.org/v3/homoit0001844" %></li>
+        <li><%= link_to "Masculinising vocal surgery", "https://homosaurus.org/v3/homoit0001843" %></li>
+        <li><%= link_to "Feminising vocal surgery", "https://homosaurus.org/v3/homoit0001842" %></li>
+        <li><%= link_to "Chest reconstruction surgery", "https://homosaurus.org/v3/homoit0001841" %></li>
+        <li><%= link_to "Top surgery", "https://homosaurus.org/v3/homoit0001840" %></li>
+        <li><%= link_to "Facial feminisation surgery", "https://homosaurus.org/v3/homoit0001839" %></li>
+        <li><%= link_to "Facial masculinisation surgery", "https://homosaurus.org/v3/homoit0001838" %></li>
+        <li><%= link_to "Facial gender affirming surgery", "https://homosaurus.org/v3/homoit0001837" %></li>
+        <li><%= link_to "Desistance (Gender)", "https://homosaurus.org/v3/homoit0001836" %></li>
+        <li><%= link_to "Retransitioning", "https://homosaurus.org/v3/homoit0001835" %></li>
+        <li><%= link_to "Detransitioning", "https://homosaurus.org/v3/homoit0001834" %></li>
+        <li><%= link_to "LGBTQ+ culture", "https://homosaurus.org/v3/homoit0001831" %></li>
+        <li><%= link_to "Queer culture", "https://homosaurus.org/v3/homoit0001832" %></li>
+        <li><%= link_to "Bisexual culture", "https://homosaurus.org/v3/homoit0001833" %></li>
+        <li><%= link_to "LGBTQ+ periodicals", "https://homosaurus.org/v3/homoit0001830" %></li>
+        <li><%= link_to "Homoeroticism", "https://homosaurus.org/v3/homoit0001806" %></li>
+        <li><%= link_to "Content warnings", "https://homosaurus.org/v3/homoit0001807" %></li>
+        <li><%= link_to "Costumes", "https://homosaurus.org/v3/homoit0001808" %></li>
+        <li><%= link_to "Indigiqueer people", "https://homosaurus.org/v3/homoit0001809" %></li>
+        <li><%= link_to "Indigiqueer", "https://homosaurus.org/v3/homoit0001810" %></li>
+        <li><%= link_to "Two-spirit community", "https://homosaurus.org/v3/homoit0001811" %></li>
+        <li><%= link_to "LGBTQ+ special collections", "https://homosaurus.org/v3/homoit0001813" %></li>
+        <li><%= link_to "Chasers", "https://homosaurus.org/v3/homoit0001814" %></li>
+        <li><%= link_to "LGBTQ+ immigrants", "https://homosaurus.org/v3/homoit0001815" %></li>
+        <li><%= link_to "Critical race theory", "https://homosaurus.org/v3/homoit0001902" %></li>
+        <li><%= link_to "Transmisogynoir", "https://homosaurus.org/v3/homoit0001903" %></li>
+        <li><%= link_to "Misogynoir", "https://homosaurus.org/v3/homoit0001904" %></li>
+        <li><%= link_to "Zaps", "https://homosaurus.org/v3/homoit0001905" %></li>
+        <li><%= link_to "Drag performers", "https://homosaurus.org/v3/homoit0001906" %></li>
+        <li><%= link_to "LGBTQ+ witches", "https://homosaurus.org/v3/homoit0001907" %></li>
+        <li><%= link_to "Lesbian witches", "https://homosaurus.org/v3/homoit0001908" %></li>
+        <li><%= link_to "Gay witches", "https://homosaurus.org/v3/homoit0001909" %></li>
+        <li><%= link_to "Bisexual witches", "https://homosaurus.org/v3/homoit0001910" %></li>
+        <li><%= link_to "Transgender witches", "https://homosaurus.org/v3/homoit0001911" %></li>
+        <li><%= link_to "Queer witches", "https://homosaurus.org/v3/homoit0001912" %></li>
+        <li><%= link_to "Intersex witches", "https://homosaurus.org/v3/homoit0001913" %></li>
+        <li><%= link_to "Two-spirit identity", "https://homosaurus.org/v3/homoit0001914" %></li>
+        <li><%= link_to "Monosexual people", "https://homosaurus.org/v3/homoit0001915" %></li>
+        <li><%= link_to "Allosexual people", "https://homosaurus.org/v3/homoit0001917" %></li>
+        <li><%= link_to "Transgenderqueer identity", "https://homosaurus.org/v3/homoit0001918" %></li>
+        <li><%= link_to "Polysexual people", "https://homosaurus.org/v3/homoit0001919" %></li>
+        <li><%= link_to "Non-binary identity", "https://homosaurus.org/v3/homoit0001920" %></li>
+        <li><%= link_to "Genderqueer identity", "https://homosaurus.org/v3/homoit0001921" %></li>
+        <li><%= link_to "Gender non-conforming identity", "https://homosaurus.org/v3/homoit0001922" %></li>
+        <li><%= link_to "Demigender identity", "https://homosaurus.org/v3/homoit0001923" %></li>
+        <li><%= link_to "Cissexuality", "https://homosaurus.org/v3/homoit0001924" %></li>
+        <li><%= link_to "Cisgender identity", "https://homosaurus.org/v3/homoit0001925" %></li>
+        <li><%= link_to "Pansexuality", "https://homosaurus.org/v3/homoit0001926" %></li>
+        <li><%= link_to "Agender identity", "https://homosaurus.org/v3/homoit0001927" %></li>
+      </ol>
+    </p>
+    <p>
+      <strong>List of revised LGBTQ+ terms:</strong><br />
+    <ol>
+      <li><%= link_to "Takatāpui", "/v3/homoit0000898" %></li>
+      <li><%= link_to "LGBTQ+ unhoused people", "/v3/homoit0000879" %></li>
+      <li><%= link_to "LGBTQ+ unhoused youth", "/v3/homoit0000880" %></li>
+      <li><%= link_to "LGBTQ+ Deaf people", "/v3/homoit0001866" %></li>
+      <li><%= link_to "Bottom surgery", "/v3/homoit0000584" %></li>
+      <li><%= link_to "Gender affirming surgery", "/v3/homoit0000561" %></li>
+      <li><%= link_to "Transitioning (Gender)", "/v3/homoit0001465" %></li>
+      <li><%= link_to "Gender binaries", "/v3/homoit0000563" %></li>
+      <li><%= link_to "Femininities", "/v3/homoit0000389" %></li>
+      <li><%= link_to "Masculinities", "/v3/homoit0000995" %></li>
+    </ol>
+
+    </p>
+  </div>
+
+  <div class="release_title">
     <h2>Homosaurus v. 3.1 Updates</h2>
     <h3>Released December 2021</h3>
   </div>
