Minor fix to not show pending on the main vocab display

--- a/app/views/homepage/release.html.erb
+++ b/app/views/homepage/release.html.erb
@@ -77,6 +77,7 @@
         <li><%= link_to "Pacific Islander American transgender people", "https://homosaurus.org/v3/homoit0001940" %></li>
         <li><%= link_to "Pacific Islander American queer people", "https://homosaurus.org/v3/homoit0001941" %></li>
         <li><%= link_to "Pacific Islander American intersex people", "https://homosaurus.org/v3/homoit0001942" %></li>
+        <li><%= link_to "Pacific Islander American LGBTQ+", "https://homosaurus.org/v3/homoit0001812" %></li>
         <li><%= link_to "LGBTQ+ athletes", "https://homosaurus.org/v3/homoit0001929" %></li>
         <li><%= link_to "Lesbian athletes", "https://homosaurus.org/v3/homoit0001930" %></li>
         <li><%= link_to "Gay athletes", "https://homosaurus.org/v3/homoit0001931" %></li>
