update about page

--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -114,7 +114,7 @@
               Jay L. Colbert
             </h4>
             <p>
-              Jay L. Colbert is the Metadata & Discovery Strategy Librarian at the University of New Hampshire. He holds a MSLIS from the University of Illinois at Urbana-Champaign, where he completed a thesis on patron-driven subject access and queer controlled vocabulary via a critical framework of queer theory and semiotics. His subsequent publications build on this research. Jay haunts New England with his bearded dragon Coop and his tuxedo cat King Arthur, constantly bugging them by dancing around his house being a shameless opera queen on main. Contact him at <%= hidden_email("jay.colbert@unh.edu", @reveal_emails) %>.</p>
+              Jay L. Colbert is the Library Director at the Longy School of Music of Bard College. He holds a MSLIS from the University of Illinois at Urbana-Champaign, where he completed a thesis on patron-driven subject access and queer controlled vocabulary via a critical framework of queer theory and semiotics. His subsequent publications build on this research. Jay haunts New England with his bearded dragon Coop and his tuxedo cat King Arthur. Contact him at <%= hidden_email("jay.colbert@unh.edu", @reveal_emails) %>.</p>
           </div>
         </div>
       </td>
