--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,6 +67,10 @@
                 <li class="divider"></li>
                 <li><%= link_to 'Add Homosaurus Term', vocabulary_term_new_path(vocab_id: "v3"), :class=>"nav_button" %></li>
               <% end %>
+              <% if current_user.superuser? || current_user.admin? %>
+                <li class="divider"></li>
+                <li><%= link_to 'Publish New Version', version_publish_new_path, :class=>"nav_button" %></li>
+              <% end %>
               <li class="divider"></li>
               <li><%= link_to 'Log Out', destroy_user_session_path, :class=>"nav_button" %></li>
             </ul>
