--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,7 +113,8 @@
 </div>
 <div class="footer" style="margin-top:50px; width:100%; color:white; background-color: #000000;">
   <div class="container" style="padding-top: 10px; padding-bottom: 10px;">
-    Homosaurus.org is a linked data service maintained by the <%= link_to("Digital Transgender Archive", "https://www.digitaltransgenderarchive.net") %>
+    Homosaurus.org is a linked data service maintained by the <%= link_to("Digital Transgender Archive", "https://www.digitaltransgenderarchive.net") %> <br />
+    This vocabulary is made available under a <%= link_to("Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International license", "https://creativecommons.org/licenses/by-nc-nd/4.0/") %>.
   </div>
 </div>
 
